--- a/volt-backend/package.json
+++ b/volt-backend/package.json
@@ -13,10 +13,14 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.4.2",
     "dotenv": "^17.3.1",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "pg": "^8.19.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.14"
+    "@prisma/client": "^7.4.2",
+    "nodemon": "^3.1.14",
+    "prisma": "^7.4.2"
   }
 }
